test/files/neg/t2316.check
t2316.scala:26: error: ambiguous implicit values:
 both method T1FromT3 in object T1 of type (implicit t3: Test.T3)Test.T1
 and method T1FromT2 in object T1 of type (implicit t2: Test.T2)Test.T1
 match expected type Test.T1
    val t1 = requireT1
             ^
one error found
